--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- open graph -->
 		<meta name="og:title" content="Вологда Орион Лес">
 		<meta name="og:type" content="website">
-		<meta name="og:image" content="/media/ogimage.jpg">
+		<meta name="og:image" content="http://vologdaorionles.ru/media/ogimage.jpg">
 		<meta name="og:url" content="">
 		<meta name="og:description" content="Продажа пиломатериалов">
 		<!-- favicon -->
