--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<meta name="description" content="Продажа пиломатериалов">
+		<meta name="yandex-verification" content="0b7f5af172d30446" />
 		<!-- open graph -->
 		<meta name="og:title" content="Вологда Орион Лес">
 		<meta name="og:type" content="website">
