favicon cod fix

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<meta name="og:url" content="">
 		<meta name="og:description" content="Продажа пиломатериалов">
 		<!-- favicon -->
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="http://vologdaorionles.ru/favicon.ico" type="image/x-icon">
 		<!-- scripts -->
 		<script src="/dist/bundle.js"></script>
 	</head>
