site description changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Вологда Орион Лес</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<meta name="description" content="Продажа пиломатериалов">
+		<meta name="description" content="Оптовая и розничная продажа пиломатериалов, элементов внутренней отделки, декора, мебели и сувенирной продукции из разных сортов дерева">
 		<meta name="yandex-verification" content="0b7f5af172d30446" />
 		<!-- open graph -->
 		<meta name="og:title" content="Вологда Орион Лес">
