--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<!-- open graph -->
 		<meta name="og:title" content="Вологда Орион Лес">
 		<meta name="og:type" content="website">
-		<meta name="og:image" content="http://vologdaorionles.ru/media/ogimage.jpg">
+		<meta name="og:image" content="https://vologdaorionles.ru/media/ogimage.jpg">
 		<meta name="og:url" content="">
 		<meta name="og:description" content="Продажа пиломатериалов">
 		<!-- favicon -->
-		<link rel="icon" href="http://vologdaorionles.ru/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="https://vologdaorionles.ru/favicon.ico" type="image/x-icon">
 		<!-- scripts -->
 		<script src="/dist/bundle.js"></script>
 	</head>
